--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons-react": "^11.0.0",
     "axios": "^0.20.0",
     "highlight.js": "^10.3.1",
     "react": "^16.13.1",
