--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@primer/octicons-react": "^11.0.0",
+    "autoprefixer": "^9.8.0",
     "axios": "^0.20.0",
     "highlight.js": "^10.3.1",
+    "postcss-cli": "^8.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -21,9 +23,9 @@
     "@testing-library/user-event": "^7.2.1"
   },
   "scripts": {
-    "build:tailwind": "tailwindcss build src/css/tailwind.css -o src/css/tailwind.output.css",
-    "prebuild": "npm run build:tailwind",
-    "prestart": "npm run build:tailwind",
+    "watch:css": "postcss src/assets/css/tailwind.css -o src/assets/css/tailwind.output.css",
+    "prebuild": "npm run watch:css",
+    "prestart": "npm run watch:css",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
