--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^9.8.0",
     "axios": "^0.20.0",
     "highlight.js": "^10.3.1",
+    "moment": "^2.29.1",
     "postcss-cli": "^8.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
